Fix cropped display of fixed list header in IE (#1295420)

--- a/skins/larry/mail.css
+++ b/skins/larry/mail.css
@@ -38,6 +38,7 @@
 	left: 0;
 	right: 0;
 	bottom: 0px;
+	overflow: visible; /* fixes display issues of fixed list header in IE */
 }
 
 #mailview-bottom {
